--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="form-group row" id="c-ac">
               <label for="ac" class="col-sm-4">AC:</label>
               <div class="col-sm-6">
-                <input type="number" class="form-control" id="ac">
+                <input type="text" class="form-control" id="ac">
               </div>
             </div>
 
@@ -70,7 +70,7 @@
             </div>
           </div>
 
-          <div class="col text-center"> <!--list-->
+          <div class="col text-center" id="midSection"> <!--list-->
             <h2 class="col-12 pt-3">Encounter List</h2>
             <div id="encounterList">
             </div>
@@ -121,8 +121,8 @@
                   </div>
                 </div>
               </div>
-              <button type="button" class="btn btn-info col-4 mb-4 collapse" id="previous" onclick="previousTurn()">Previous</button>
-              <button type="button" class="btn btn-info col-4 mb-4 collapse" id="next" onclick="nextTurn()">Next</button>
+              <button type="button" class="btn btn-info col-4 mb-4 collapse text-break" id="previous" onclick="previousTurn()">Previous</button>
+              <button type="button" class="btn btn-info col-4 mb-4 collapse text-break" id="next" onclick="nextTurn()">Next</button>
               <button type="button" class="btn btn-secondary col-12" id="descending">Descending Order</button>
               <button type="button" class="btn btn-secondary col-12" id="ascending">Ascending Order</button>
               <button type='button' class='btn btn-danger col-12 collapse' id='end' onclick='end()'>End Combat</button>
@@ -143,7 +143,7 @@
           <div class="form-group row" id="c-ac1">
             <label for="ac1" class="col-sm-5 ">Armour Class:</label>
             <div class="col-sm-6">
-              <input type="number" class="form-control" id="ac1">
+              <input type="text" class="form-control" id="ac1">
             </div>
           </div>
           
